implemented JPA entities and relationships